Eliminate unused items on signon

--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -102,17 +102,17 @@
                     <div class="flex-auto mt-px border-t"></div>
                 </div>
 
-                <!-- Single sign-on buttons -->
+                Single sign-on buttons
                 <div class="flex items-center mt-8 space-x-4">
-                    <button
+                    < <button
                         class="flex-auto"
                         type="button"
                         mat-stroked-button>
                         <mat-icon
                             class="icon-size-5"
                             [svgIcon]="'feather:facebook'"></mat-icon>
-                    </button>
-                    <button
+                    </button> -->
+                    <!-- <button
                         class="flex-auto"
                         type="button"
                         mat-stroked-button>
