Sign-Up Form Malfunction
Added a few inputs/controls to the signup html and ts files: state,city,npn. And checked routes and links to sign up page. When inspecting signup page while serving, i can find them but they are not visible to the naked eye. Check this

--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -17,6 +17,10 @@
             </div>
 
 
+            <!-- Alert -->
+
+
+            <!-- Sign in form -->
             <form
                 class="mt-8"
                 [formGroup]="signInForm"
@@ -96,23 +100,23 @@
                 </button>
 
                 <!-- Separator -->
-               <!-- <div class="flex items-center mt-8">
+                <div class="flex items-center mt-8">
                     <div class="flex-auto mt-px border-t"></div>
                     <div class="mx-2 text-secondary">Or continue with</div>
                     <div class="flex-auto mt-px border-t"></div>
                 </div>
 
-                Single sign-on buttons
+                <!-- Single sign-on buttons -->
                 <div class="flex items-center mt-8 space-x-4">
-                    < <button
+                    <button
                         class="flex-auto"
                         type="button"
                         mat-stroked-button>
                         <mat-icon
                             class="icon-size-5"
                             [svgIcon]="'feather:facebook'"></mat-icon>
-                    </button> -->
-                    <!-- <button
+                    </button>
+                    <button
                         class="flex-auto"
                         type="button"
                         mat-stroked-button>
@@ -131,7 +135,7 @@
                 </div>
             </form>
         </div>
-    </div> -->
+    </div>
     <div class="relative hidden md:flex flex-auto items-center justify-center w-1/2 h-full p-16 lg:px-28 overflow-hidden bg-gray-800 dark:border-l">
         <!-- Background - @formatter:off -->
         <!-- Rings -->
@@ -157,10 +161,10 @@
         <div class="z-10 relative w-full max-w-2xl">
             <div class="text-7xl font-bold leading-none text-gray-100">
                 <div>Welcome to</div>
-                <div>"paul's app name"</div>
+                <div>our community</div>
             </div>
             <div class="mt-6 text-lg tracking-tight leading-6 text-gray-400">
-                Paul's App helps agents share customers that might otherwise lose coverage.The original agent does not lose track of the customer, the new agent gains new business, and the customer has one less thing to worry about.
+                We help agents refer business to each other wheresas the agent referring, the agent receeiving, and the customer all win. 
             </div>
             <div class="flex items-center mt-8">
                 <div class="flex flex-0 items-center -space-x-1.5">
@@ -177,7 +181,7 @@
                         class="flex-0 w-10 h-10 rounded-full ring-4 ring-offset-1 ring-gray-800 ring-offset-gray-800 object-cover"
                         src="assets/images/avatars/male-16.jpg">
                 </div>
-                <div class="ml-4 font-medium tracking-tight text-gray-400">Let's help each other in helping others stay insured</div>
+                <div class="ml-4 font-medium tracking-tight text-gray-400">More than 17k people joined us, it's your turn</div>
             </div>
         </div>
     </div>
